# poc-protobuf-bazel

./: .bazelrc  .gitignore  MODULE.bazel  README.md
cpp-client/: .clang-format  .clangd  BUILD  hello-world.cc
cpp-client/src/: Client.cpp  Client.h  Constants.h  CppClientMain.cpp
cpp-client/src/client/: Client.cpp  Client.h
cpp-client/src/client/thread/: ReceiveThread.cpp  ReceiveThread.h
cpp-client/src/thread/: ReceiveThread.cpp  ReceiveThread.h
java-client/: BUILD
java-client/src/main/java/poc/: JavaClientMain.java
java-client/src/main/java/poc/client/: AutoClient.java  ChatProtocol.java  Client.java  IEvent.java  JavaClientMain.java  Terminal.java  Utils.java
java-client/src/main/java/poc/client/event/: IEvent.java
java-client/src/main/java/poc/client/thread/: ReceiveThread.java  StdinThread.java
java-client/src/main/java/poc/client/util/: Terminal.java  Utils.java
java-server/: BUILD
java-server/src/main/java/poc/: JavaServerMain.java
java-server/src/main/java/poc/server/: ChatProtocol.java  HelloWorld.java  JavaServerMain.java  Server.java
java-server/src/main/java/poc/server/event/: ClientAddEvent.java  ClientRemoveEvent.java  IEvent.java  ShutdownEvent.java  TickEvent.java  UserDisconnectedEvent.java  UserIncomingEvent.java  UserOutgoingEvent.java
java-server/src/main/java/poc/server/thread/: ConnectionCloser.java  IncomingConnectionListener.java  RemoteClient.java  TaskOffload.java  TickEventGenerator.java
java-server/src/main/java/server/: HelloWorld.java
protocol/: BUILD  chat.proto
(+1 files in other folders)
