bazel_dep(name = "rules_cc", version = "0.2.19")
bazel_dep(name = "rules_java", version = "9.6.1")
bazel_dep(name = "protobuf", version = "35.0")

# Local JDK first
java_toolchains = use_extension("@rules_java//java:extensions.bzl", "toolchains")
use_repo(java_toolchains, "local_jdk")
register_toolchains("@local_jdk//:all")

# Bazel Compile Commands Extractor (helly25 fork; see FORK.md for context)
# https://github.com/helly25/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)  # Bazel module name kept for backwards compat with existing consumers.
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/helly25/bazel-compile-commands-extractor.git",
    commit = "75ba4c31d3b74fa5fb57c7508220571d4e52f828",
    # Replace the commit hash with the latest from
    # https://github.com/helly25/bazel-compile-commands-extractor/commits/main
)
